testsuite/tests/patsyn/should_fail/export-type.stderr

export-type.hs:3:16: error: [GHC-66025]
    • Pattern synonyms can only be bundled with matching type constructors
      Couldn't match expected type of ‘A’ with actual type of ‘B’
    • In the pattern synonym: MyB
      In the export: A(.., MyB)

export-type.hs:3:27: error: [GHC-66025]
    • Pattern synonyms can only be bundled with matching type constructors
      Couldn't match expected type of ‘B’ with actual type of ‘A’
    • In the pattern synonym: MyA
      In the export: B(MyA)

export-type.hs:3:35: error: [GHC-66025]
    • Pattern synonyms can only be bundled with matching type constructors
      Couldn't match expected type of ‘C a’ with actual type of ‘B’
    • In the pattern synonym: MyC
      In the export: C(MyC)
